<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageTripActivity"
    android:orientation="vertical"
    android:background="@color/back">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingEnd="20sp"
        android:paddingTop="20sp"
        android:paddingBottom="10sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/TripName"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:drawableLeft="@drawable/ic_info_outline_black_24dp"/>



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingEnd="20sp"
        android:paddingBottom="10sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/Destination"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:drawableLeft="@drawable/ic_location_on_black_24dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingEnd="20sp"
        android:paddingBottom="10sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/TripType"
            android:textColor="@color/text"
            android:textSize="20sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10sp">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioB1"
                android:textSize="20dp"
                android:textColor="@color/textb"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioB2"
                android:textSize="20dp"
                android:textColor="@color/textb"/>

            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radioB3"
                android:textSize="20dp"
                android:textColor="@color/textb"/>

        </RadioGroup>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingEnd="20sp"
        android:paddingBottom="10sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/price"
            android:textColor="@color/text"
            android:textSize="20sp"/>


        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="10"
            android:paddingTop="10sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:paddingEnd="20sp"
        android:paddingBottom="10sp">


        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/startDate"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:paddingBottom="10sp"/>

        <EditText
            android:id="@+id/date1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/textb"
            android:hint="@string/date"
            android:padding="10sp"
            android:inputType="date"

            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/endDate"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:paddingBottom="10sp"/>


            <EditText
                android:id="@+id/date2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textb"
                android:hint="@string/date"
                android:padding="10sp"
                android:inputType="date"
                />

        </LinearLayout>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20sp"
        android:paddingEnd="20sp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/rating"
            android:textColor="@color/text"
            android:textSize="20sp"/>


        <RatingBar
            android:id="@+id/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="0"
            android:stepSize="1"
            android:paddingTop="10sp"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp">


        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>


